examples/bad/typecheck/fun-by-ref-wrong-arg.oo
int x = 5;
int mult3 (int &y) {
    y = y * 3;
    return y;
}

print(mult3(5));
